# skill-platform

./: .env.example  .gitignore  LICENSE  pyproject.toml  skill-platform.code-workspace
apps/skillbot/: pyproject.toml
apps/skillbot/src/skillbot/: main.py
apps/skillforge/: pyproject.toml
apps/skillforge/src/skillforge/: main.py
apps/skillmaker/: pyproject.toml
apps/skillmaker/src/skillmaker/: main.py
